[project]
name = "feeling-blue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "atproto>=0.0.55",
    "fastapi>=0.115.5",
    "protobuf>=5.28.3",
    "sqlmodel>=0.0.22",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "transformers>=4.46.3",
]
